# azure_sphere_mruby

./: LICENSE  README.md  azure_sphere_mruby.code-workspace  start_code.bat
app/: CMakeLists.txt  app_manifest.json  client.rb  main.c  stub.c
mrbgems/mruby-azure-iot/: README.md  mrbgem.rake
mrbgems/mruby-azure-iot/example/: client.rb
mrbgems/mruby-azure-iot/src/: mrb_azure_iot.c
mrbgems/mruby-others/: mrbgem.rake
mrbgems/mruby-others/src/: dummy.c
mruby-2.1.1/: CMakeLists.txt  Rakefile  build_config.rb
mruby-2.1.1/include/: mrbconf.h  mruby.h
mruby-2.1.1/lib/mruby/: build.rb  gem.rb
mruby-2.1.1/mrbgems/mruby-io/src/: file.c  file_test.c  io.c
mruby-2.1.1/mrbgems/mruby-socket/src/: socket.c
mruby-2.1.1/src/: error.c  symbol.c
mruby-2.1.1/tasks/toolchains/: gcc.rake  visualcpp.rake
